Fixed webkit-overflow errors, updated the WP PNG, added content on the Contact Me page, fixed the live background on the Contact Me page

--- a/Public/styles.css
+++ b/Public/styles.css
@@ -1,9 +1,3 @@
-.Galaxy2 {
-    height: 100vh;
-        width: 100%;
-        object-fit: fill;
-}    
-
 li a.nav-link {
     background-image: linear-gradient(60deg, #b500da, #0018f1);
     background-clip: text;
@@ -126,17 +120,84 @@ li.nav-item {
     font-size: 1.5rem;
   }
 
-  .contentContactMe {
+  /* This div structures all Contact Me children div's - START */
+   div.contactMeStructure {
+    display: flex;
+    margin: 1rem;
+    padding: 2rem 2rem;
+    max-height: 30rem;
     text-align: center;
-    position: fixed;
-    bottom: 0;
+  }
+  /* This div structures all Contact Me children div's - END */
+  
+  /* First Contact Me Bio Div Styles - START */
+  .contactMeHeader {
+    text-align: center;
+    background: -webkit-linear-gradient(#38c7ff, #d21fff);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .contentContactMe {
+    flex: 1;
+    border-width: 1rem;
+    border-color: #000000;
+    border-style: double;
+    max-width: 40%;
     background: rgba(0, 0, 0, 0.8);
     color: #f1f1f1;
-    width: 100%;
-    height: 25rem;
-    margin-bottom: 17.5rem;
     font-size: 1.5rem;
+    padding: 1rem 1rem 0rem 2rem;
+    margin-right: 10rem;
+    max-height: 22.5rem;
+    min-width: 15rem;
+    overflow-y: auto;
   }
+
+  .contactMeHr {
+   width: 90%;
+   margin: auto;
+  }
+
+  p.contactMeBio {
+    padding: 1rem 1rem;
+  }
+  /* Contact Me Bio Div Styles - END */
+
+  /* Contact Information Div Styles - START */
+  .contentContactMe2 {
+    flex: 1;
+    border-width: 1rem;
+    border-color: #000000;
+    border-style: double;
+    background: rgba(0, 0, 0, 0.8);
+    color: #f1f1f1;
+    max-height: 22.5rem;
+    min-width: 15rem;
+    font-size: 1.5rem;
+    padding: 1rem 0 0 0;
+    overflow-wrap: break-word;
+    text-align: justify;
+  }
+
+  .contactMeHeader2 {
+    text-align: center;
+    background: -webkit-linear-gradient(#4a00d3, #ff1f75);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  p.contactInformation {
+    padding: 0.5rem 3rem;
+  }
+
+  p.contactInformationFooter {
+    text-align: center;
+    padding-bottom: 2rem;
+  }
+  /* Contact Information Div Styles - END */
 
   .card-html{
     background-color: rgba(43, 43, 43, 0.493);
@@ -203,6 +264,7 @@ li.nav-item {
     background-color: #f3ec78;
     background-image: linear-gradient(45deg, #ffffff, #535353);
     background-size: 100%;
+    background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent; 
